--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,10 +1,30 @@
 spring:
   mvc:
     view:
-      prefix: /WEB-INF/jsp/
+      prefix: /WEB-INF/views/
       suffix: .jsp
 
 server:
   port: 8080
   servlet:
     context-path: /
+
+datasource:
+  mongodb:
+    host: 192.168.60.20
+    port: 27017
+    database: VUEJS
+    username: vuejs
+    password: vuejs12#$
+  influxdb:
+    url: http://192.168.60.20:8086
+    token: opennaru12#$
+    org: openmaru
+    bucket: VUEJS
+    max-connections: 10
+    wait-idle-close-ttl: 60000
+    request-timeout: 30000
+    session-timeout: 60000
+
+vuejs:
+  rest-url: http://localhost:8080
