이중화하여 캐시 공유 되도록 수정 - Serialize 추가 - CacheManager 추가

--- a/build.gradle
+++ b/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
     // cache ( hazelcast )
     implementation 'com.hazelcast:hazelcast:5.0'
+    implementation 'com.hazelcast:hazelcast-spring:5.0'
 
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
