rabbitmq producer/consumer 추가

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,9 @@ dependencies {
     implementation 'com.hazelcast:hazelcast:5.0'
     implementation 'com.hazelcast:hazelcast-spring:5.0'
 
+    // rabbitMQ
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+
     // Test
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
