--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
   servlet:
     context-path: /
 
-datasource:
+services:
   mongodb:
     host: 192.168.60.20
     port: 27017
@@ -25,13 +25,15 @@ datasource:
     wait-idle-close-ttl: 60000
     request-timeout: 30000
     session-timeout: 60000
-
-hazelcast:
-  cluster-name: vuejs-cluster
-  address: 127.0.0.1
-  port: 5701
-  cache-map-names: getPost,getPostList,getSearchPostList
-
+  hazelcast:
+    cluster-name: vuejs-cluster
+    address: 127.0.0.1
+    port: 5701
+  rabbitmq:
+    host: 192.168.60.20
+    port: 5672
+    username: khan
+    password: opennaru12#$
 
 vuejs:
   rest-url: http://localhost:8080
