--- a/src/main/resources/hotrod.properties
+++ b/src/main/resources/hotrod.properties
@@ -1,8 +1,8 @@
+# 2.0
+# Opennaru, Inc. http://www.opennaru.com/
 #
-# Openmaru, Inc. https://www.openmaru.io/
-#
-#  Copyright (C) 2014 Openmaru, Inc. and/or its affiliates.
-#  All rights reserved by Openmaru, Inc.
+#  Copyright (C) 2014 Opennaru, Inc. and/or its affiliates.
+#  All rights reserved by Opennaru, Inc.
 #
 #  This is free software; you can redistribute it and/or modify it
 #  under the terms of the GNU Lesser General Public License as
@@ -18,31 +18,45 @@
 #  License along with this software; if not, write to the Free
 #  Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
 #  02110-1301 USA, or see the FSF site: http://www.fsf.org.
-#
-#########################################################################################################################
+# https://docs.jboss.org/infinispan/7.2/apidocs/org/infinispan/client/hotrod/RemoteCacheManager.html
 
+# hopefully this port is available
+infinispan.client.hotrod.transport_factory = org.infinispan.client.hotrod.impl.transport.tcp.TcpTransportFactory
 infinispan.client.hotrod.server_list = 192.168.60.20:11322
-infinispan.client.hotrod.auth_username = wasadm
-infinispan.client.hotrod.auth_password = opennaru!2
-
-infinispan.client.hotrod.sasl_mechanism=DIGEST-MD5
+#infinispan.client.hotrod.server_list = 192.168.40.15:11322;192.168.40.15:11422;
 
 infinispan.client.hotrod.marshaller = org.infinispan.commons.marshall.JavaSerializationMarshaller
-#infinispan.client.hotrod.java_serial_allowlist=*
+#infinispan.client.hotrod.marshaller = org.infinispan.commons.marshall.jboss.GenericJBossMarshaller
+#infinispan.client.hotrod.marshaller = com.opennaru.khan.marshaller.hotrod.KhanGridMarshaller
+#infinispan.client.hotrod.marshaller = com.opennaru.khan.marshaller.hotrod.KhanFSTMarshaller
+#infinispan.client.hotrod.marshaller = com.opennaru.khan.marshaller.hotrod.KhanAvroMarshaller
+#infinispan.client.hotrod.marshaller = com.opennaru.khan.marshaller.hotrod.KhanFSTJdk11Marshaller
 
 infinispan.client.hotrod.async_executor_factory = org.infinispan.client.hotrod.impl.async.DefaultAsyncExecutorFactory
 infinispan.client.hotrod.default_executor_factory.pool_size = 100
-infinispan.client.hotrod.hash_function_impl.2 = org.infinispan.client.hotrod.impl.consistenthash.ConsistentHashV2
+infinispan.client.hotrod.default_executor_factory.queue_size = 100000
+infinispan.client.hotrod.hash_function_impl.1 = org.infinispan.client.hotrod.impl.consistenthash.ConsistentHashV1
+infinispan.client.hotrod.tcp_no_delay = true
+infinispan.client.hotrod.ping_on_startup = true
 infinispan.client.hotrod.request_balancing_strategy = org.infinispan.client.hotrod.impl.transport.tcp.RoundRobinBalancingStrategy
 infinispan.client.hotrod.key_size_estimate = 64
 infinispan.client.hotrod.value_size_estimate = 1024
-infinispan.client.hotrod.force_return_values = false
+infinispan.client.hotrod.force_return_values = true
 
 infinispan.client.hotrod.connect_timeout=5000
 infinispan.client.hotrod.socket_timeout=5000
 
 ## below is connection pooling config
-infinispan.client.hotrod.connection_pool.max_active=250
-infinispan.client.hotrod.connection_pool.min_idle = 1
-infinispan.client.hotrod.connection_pool.exhausted_action = WAIT
-infinispan.client.hotrod.connection_pool.max_wait = 5000
+maxActive=250
+maxTotal =250
+maxIdle = 50
+whenExhaustedAction = 1
+# 0 - an exception will be thrown to the calling user
+# 1 - the caller will block (invoke waits until a new or idle connections is available.
+# 2 - a new persistent connection will be created and returned (essentially making maxActive meaningless.)
+
+timeBetweenEvictionRunsMillis=120000
+minEvictableIdleTimeMillis=300000
+minIdle = 1
+testWhileIdle = true
+testOnBorrow=true
